[tool.poetry]
name = "rfc9457"
version = "0.1.1"
description = "Implementation of RFC9457 problems."
authors = ["Daniel Edgecombe <daniel@nrwl.co>"]
license = "Apache-2.0"
repository="https://github.com/NRWLDev/rfc9457/"
homepage="https://github.com/NRWLDev/rfc9457/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
multidict = "*"

[tool.poetry.dev-dependencies]

changelog-gen = "^0.11"
pytest = "~7.4.3"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.0"

# Style
ruff = "^0.3"
pre-commit = "^3.0.2"

[tool.changelog_gen]
current_version = "0.1.1"
reject_empty = true
allowed_branches = [
    "main",
]
date_format = "- %Y-%m-%d"
issue_link = "https://github.com/NRWLDev/rfc9457/issues/::issue_ref::"
commit_link = "https://github.com/NRWLDev/rfc9457/commit/::commit_hash::"

[[tool.changelog_gen.files]]
filename = "pyproject.toml"
pattern = 'version = "{version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--random-order"
markers = [
    "backwards_compat: marks tests as part of backwards compatibility checks.",
]

[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "if t.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["src/rfc9457"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # ParamSpec not available in 3.9
    "ANN003",  # ParamSpec not available in 3.9
    "FIX",  # allow TODO
    "D",
]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001", "S"]
"tests/*" = ["ANN", "D", "S101", "S105", "S106", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["rfc9457"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
